# shopee_afiliados_docs

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.hive/: issues.jsonl
archive/: AGENTS.md  ORGANIZATION_LOG_2026-02-12.md  undo_organization_2026-02-12.sh
benchmarks/: render_benchmark.py
docs/: AGENTS.md  API_DOCUMENTACAO_COMPLETA.md  API_INTROSPECTION.md  ARCHITECTURE.md  ATUALIZACAO_FINAL.md  CICD_SETUP.md  ENDPOINTS_TESTADOS.md  FLUXOS_MERMAID.md  GUIA_COMPLETO.md  GUIA_UV.md  INVESTIGACAO_VALIDATION_ID_RESULTADO.md  OTIMIZACAO_DESEMPENHO.md  PESQUISA_SCHEMA_RESUMO.md  PLANO_VALIDATION_ID.md  RASTREAMENTO_COMISSOES.md  REPORTS_ANALYSIS.md  REVISAO_PERFORMANCE.md  SCHEMA_DESCOBERTO.md  docs_shopee_affiliate.md  introspection_raw.json
examples/: AGENTS.md  README.md  test_api.py
examples/python/: AGENTS.md  export_conversion_report_csv.py  shopee_affiliate_client.py
scripts/: AGENTS.md  explore_schema.py  run_all_tests.py  update_client_from_docs.py
src/: AGENTS.md  shopee_affiliate_client.py
src/shopee_affiliate/: AGENTS.md  __init__.py  auth.py  client.py  queries.py  transport.py  validators.py
src/shopee_affiliate/graphql/: AGENTS.md  __init__.py  conversionReport.graphql  generateShortLink.graphql  productOfferV2.graphql  shopOfferV2.graphql  shopeeOfferV2.graphql  validatedReport.graphql
tests/: AGENTS.md  full_introspection.py  introspect_partner_order.py  investigate_validation_id.py
tests/python/: AGENTS.md  subid_test_results.json  test_conversion_report.py  test_generate_short_link.py  test_payload_format.py  test_payload_simple.py  test_product_offer.py  test_product_offer_v2.py  test_shop_offer.py  test_shop_offer_v2.py  test_shopee_offer.py  test_shopee_offer_v2.py  test_short_link.py  test_subids_comprehensive.py  test_validated_report.py
tests/unit/: AGENTS.md  test_auth.py  test_validators.py
