[metadata]
name = shopee-afiliados-docs
version = attr: shopee_affiliate.__version__
description = Documentacao, scripts e cliente Python para a API Shopee Affiliate
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gabrielramos/shopee_afiliados_docs
author = Gabriel Ramos
author_email =
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Typing :: Typed
keywords = shopee, affiliate, api, graphql, brazil

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.32.0
    python-dotenv>=1.0.0

[options.packages.find]
where = src
include = shopee_affiliate*

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-cov>=5.0.0
    ruff>=0.6.0
    mypy>=1.11.0
    bandit>=1.7.9
    safety>=3.2.0

[options.entry_points]
console_scripts =
    shopee-affiliate = shopee_affiliate.cli:main

[bdist_wheel]
universal = 0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -q
    --strict-markers
    --tb=short
markers =
    integration: marks tests as integration tests (may require API credentials)
    unit: marks tests as unit tests (no external dependencies)
    slow: marks tests as slow (deselect with '-m "not slow"')

[coverage:run]
source = src
omit =
    */tests/*
    */__pycache__/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
